[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PhyloDist"
authors = [
    {name = "Martin Schoenstein", email = "martin.schoenstein@etu.unistra.fr"},
    {name = "Pauline Mermillod", email = "pauline.mermillod@etu.unistra.fr"}
]
description = "Compute distances between phylogenetic profiles with different metrics and obtain functional modules"
readme = "README.rst"
version = "1.0.0"
requires-python = "<=3.12"
keywords = [
    "phylogenetic-profiles",
    "distance-metrics",
    "phylogenetics",
    "binary-profiles",
    "similarity-metrics",
    "comparative-genomics",
    "cotransition",
    "transition-vectors",
    "clustering",
    "heatmaps",
    "graph",
    "connected-component"
]
license = {text = "LGPL-3.0"}

dependencies = [
    'biopython==1.84',
    'numpy==2.1.3',
    'pandas==2.2.3',
    'scikit-learn==1.5.2',
    'scipy==1.15.2',
    'networkx==3.4.2',
    'matplotlib==3.9.4',
    'seaborn==0.13.2',
    'urllib3==2.2.3',
    'goatools==1.4.12',
    'ete3==3.1.3'
]


[tool.ruff]
lint.select = ["All"]