[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["profylo"]

[project]
name = "profylo"
authors = [
    {name = "Martin Schoenstein", email = "martin.schoenstein@etu.unistra.fr"},
    {name = "Pauline Mermillod", email = "pauline.mermillod@etu.unistra.fr"}
]
description = "Easy-to-use package for processing and comparing phylogenetic profiles, extracting functional modules and analyzing them" 
readme = "README.rst"
version = "1.0.0"
requires-python = "<3.13"
keywords = [
    "phylogenetic-profiles",
    "distance-metrics",
    "phylogenetics",
    "binary-profiles",
    "similarity-metrics",
    "comparative-genomics",
    "cotransition",
    "transition-vectors",
    "clustering",
    "heatmaps",
    "graph",
    "connected-component"
]
license = {text = "LGPL-3.0"}

dependencies = [
    'biopython==1.85',
    'numpy==2.1.3',
    'pandas==2.2.3',
    'scikit-learn==1.6.1',
    'scipy==1.15.2',
    'networkx==3.4.2',
    'matplotlib==3.10.1',
    'seaborn==0.13.2',
    'urllib3==2.4.0',
    'goatools==1.4.12',
    'ete3==3.1.3',
    'markov-clustering==0.0.6.dev0'
]

[project.scripts]
profylo = "profylo.profylo:profylo_cli"


[tool.ruff]
lint.select = ["All"]