[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["profylo*", "example*"]

[project]
name = "profylo"
authors = [
    {name = "Martin Schoenstein", email = "martin.schoenstein@etu.unistra.fr"},
    {name = "Pauline Mermillod", email = "pauline.mermillod@etu.unistra.fr"}
]
description = "Easy-to-use package for processing and comparing phylogenetic profiles, extracting functional modules and analyzing them" 
readme = "README.md"
version = "1.0.1"
requires-python = "<3.13"
keywords = [
    "phylogenetic-profiles",
    "distance-metrics",
    "phylogenetics",
    "binary-profiles",
    "similarity-metrics",
    "comparative-genomics",
    "cotransition",
    "transition-vectors",
    "clustering",
    "heatmaps",
    "graph",
    "connected-component"
]
license = {text = "LGPL-3.0"}

dependencies = [
    'biopython>=1.66',
    'numpy>=2.0.0',
    'pandas>=2.2.0',
    'scikit-learn>=1.0',
    'scipy>=1.1.0',
    'networkx>=3.0',
    'matplotlib>=3.0.0',
    'seaborn>=0.6.0',
    'urllib3==2.0.2',
    'goatools>=1.0.2',
    'ete3>=3.1.1',
    'markov-clustering==0.0.6.dev0'
]

[project.scripts]
profylo = "profylo.profylo:profylo_cli"


[tool.ruff]
lint.select = ["All"]
